# bevy_vox_mesh

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: boy.vox  fishtank.vox  monu1 water.vox  monu1.vox  shapes.vox  study.vox  test.vox  工作台.vox
examples/: animation-generation.rs  animation-scene.rs  basic-model.rs  basic.rs  boy.rs  chicken.vox  cloud-generation.rs  cloud-scene.rs  emissive-model.rs  main.rs  modify-scene.rs  modify-voxels.rs  picking.rs  recentering-model.rs  scene-slice.rs  shaders.rs  ssao-model.rs  transmission-scene.rs  voxel-collisions.rs  voxel-generation.rs
examples/render/: main.rs
src/: lib.rs  loader.rs  mate_data.rs  mesh.rs  mesher.rs  observers.rs  tests.rs  vox_scene_info.rs  voxel.rs  voxel_scene.rs
src/load/: mod.rs  parse_scene.rs
src/model/: data.rs  mesh.rs  mod.rs  modify.rs  palette.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
