[package]
name = "bevy_vox_mesh"
description = "A bevy engine plugin for loading magica voxel files directly in bevy as usable meshes."
license = "MIT"
version = "0.8.0"
repository = "https://github.com/Game4all/bevy_vox_mesh"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
] }
dot_vox = "5.1.1"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
anyhow = "1.0.38"
thiserror = "1.0.50"

[dev-dependencies]
bevy = { version = "0.12.0" }

[[example]]
name = "basic"
path = "examples/basic.rs"
