[package]
name = "bevy_vox_scene"
description = "A Bevy engine plugin for loading Magica Voxel world files and render materials directly in Bevy as a scene graph."
keywords = ["Bevy", "voxel", "Magica-Voxel"]
categories = ["game-development", "graphics", "rendering", "rendering::data-formats"]
license = "MIT"
version = "0.10.4"
repository = "https://github.com/Utsira/bevy_vox_scene"
authors = ["Oliver Dew <olidew@gmail.com>"]
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_pbr",
  "pbr_transmission_textures",
] }
dot_vox = "5.1.1"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
anyhow = "1.0.38"
thiserror = "1.0.50"
serde = "1.0.193"

[dev-dependencies]
bevy = { version = "0.12.0" }
bevy_panorbit_camera = "0.10.0"
rand = "0.8.5"
async-std = { version = "1.12.0", features = ["attributes"] }