workspace = { members = ["utilities"] }
[package]
name = "bevy_vox_scene"
description = "A Bevy engine plugin for loading Magica Voxel world files and render materials directly in Bevy as a scene graph."
keywords = ["bevy", "voxel", "Magica-Voxel"]
categories = ["game-development", "graphics", "rendering", "rendering::data-formats"]
license = "MIT"
version = "0.19.0"
repository = "https://github.com/Utsira/bevy_vox_scene"
authors = ["Oliver Dew <olidew@gmail.com>"]
edition = "2024"
readme = "README.md"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["modify_voxels", "generate_voxels", "pbr_transmission_textures"]
modify_voxels = []
generate_voxels = []
pbr_transmission_textures = ["bevy/pbr_transmission_textures"]
webgl2 = ["bevy/webgl2"]

[[example]]
name = "modify-voxels"
required-features = ["modify_voxels"]

[[example]]
name = "voxel-collisions"
required-features = ["modify_voxels"]

[[example]]
name = "voxel-generation"
required-features = ["generate_voxels"]

[dependencies]
bevy = { version = "0.17.0-rc.1", default-features = false, features = [
  "bevy_render",
  "bevy_scene",
  "bevy_asset",
  "bevy_pbr",
  "bevy_log",
  "png",
] }
dot_vox = "5.1.1"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
anyhow = "1.0.38"
thiserror = "2.0.12"
serde = "1.0.219"

[dev-dependencies]
bevy = "0.17.0-rc.1"
utilities = { path = "utilities" }
rand = "0.9.0"
async-std = { version = "1.12.0", features = ["attributes"] }
